fixed unreadable text

--- a/_src-lp/blocks/b-banner/b-banner.scss
+++ b/_src-lp/blocks/b-banner/b-banner.scss
@@ -325,11 +325,10 @@
   background-color: #22ac3b;
   text-align: center;
   color: #fff;
-  padding: 10px 0;
+  padding:0 10px;
   font-weight: 600;
   text-decoration: none;
   font-size: 14px;
-  line-height: 0;
   width: 108%;
   margin-left: -10px;
 
